// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge component > renders correctly with default variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Badge component > renders correctly with destructive variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Badge component > renders correctly with outline variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Badge component > renders correctly with secondary variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  >
    Hello
  </div>
</DocumentFragment>
`;
